src/kubernetes/docker-desktop/cinemaabyss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: cinemaabyss
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: cinemaabyss.example.com
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy-service
              port: 
                number: 8000
        - path: /api/events/.*
          pathType: Prefix
          backend:
            service:
              name: events-service
              port: 
                number: 8082
